fix leading whitespace

--- a/less/site.less
+++ b/less/site.less
@@ -51,6 +51,7 @@ div.command-bar {
   top: 50px;
   color: #C1C2C3;
   overflow-y: auto;
+  white-space: pre-wrap;
 }
 
 .footer {
